fix overflowScroll

--- a/cartRWD1.css
+++ b/cartRWD1.css
@@ -22,7 +22,7 @@
         text-indent: 2px;
     }
 
-    .cardStyle2{
+    .paymore{
         overflow: scroll;
     }
 
